setuptools related info updated

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,10 @@
 graft hacs
 graft docs
+include LICENSE
+include MANIFEST.in
 include *.rst
-global-exclude *.pyc
+include *.py
+recursive-exclude hacs/locales * *.mo
+recursive-exclude hacs/generated * *.*
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
