--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,16 @@
-[check-manifest]
-ignore =
-    *.cfg
-    .coveragerc
-    .editorconfig
-    .gitattributes
-    bootstrap-buildout.py
+[build_sphinx]
+source-dir = docs/
+build-dir  = docs/build
+all_files  = 1
+
+[upload_sphinx]
+upload-dir = docs/build/html
+
+[bdist_rpm]
+requires = Django >= 1.8
+
+[wheel]
+universal = 1
+
+[aliases]
+test=pytest
